--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,5 +1,9 @@
 name: build-docker-container-image
-  uses: docker/build-push-action@v2
+on: push
+jobs:
+  name: Build Docker Container Image
+  runs-on: ubuntu-latest 
+  uses: docker/build-push-action@v1
   with:
     username: ${{ secrets.DOCKER_USERNAME }}
     password: ${{ secrets.DOCKER_PASSWORD }}
