--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,12 +1,9 @@
-name: build-docker-container-image
-on: push
-jobs:
   name: Build Docker Container Image
-  runs-on: ubuntu-latest 
+  runs-on: push
   uses: docker/build-push-action@v1
   with:
     username: ${{ secrets.DOCKER_USERNAME }}
     password: ${{ secrets.DOCKER_PASSWORD }}
     repository: ferdaozdemir/oyente
-    tags: latest
-    push: true
+    tags: latest, ${{ github.run_number }}
+
