--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,6 +4,6 @@
   with:
     username: ${{ secrets.DOCKER_USERNAME }}
     password: ${{ secrets.DOCKER_PASSWORD }}
-    repository: ferdaozdemir/oyente
+    repository: ferdaozdemir/oyente1
     tags: latest, ${{ github.run_number }}
 
