--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,9 +1,15 @@
-  name: Build Docker Container Image
-  runs-on: push
-  uses: docker/build-push-action@v1
-  with:
-    username: ${{ secrets.DOCKER_USERNAME }}
-    password: ${{ secrets.DOCKER_PASSWORD }}
-    repository: ferdaozdemir/oyente1
-    tags: latest, ${{ github.run_number }}
-
+name: Build Docker Container Image
+on: push
+jobs:
+  build-container:
+    name: Build container
+    runs-on: ubuntu-latest
+    steps:
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: ferdaozdemir/oyente
+          tags: ${{ github.run_number }}, latest
+  
