--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,6 +11,6 @@ jobs:
           username: ${{ secrets.DOCKER_USER_NAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: ferdaozdemir/oyente
-          dockerfile: ../../Dockerfile
+          dockerfile: oyente/Dockerfile
           tags: latest
   
