--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,21 +1,32 @@
-
-      
-name: Build Docker Container Image
-on: push
+name: docker
+on:
+  push
+    
 jobs:
-  build-container:
-    name: Build container
+  build:
     runs-on: ubuntu-latest
+
     steps:
-    name: Checkout
+    - name: Checkout
       uses: actions/checkout@v2
 
-    name: Push to Docker Hub
-        uses: docker/build-push-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USER_NAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ferdaozdemir/oyente
-          dockerfile: ../../oyente/Dockerfile
-          tags: latest
-  
+
+    - name: Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Login
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USER_NAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        username: ${{ secrets.DOCKER_USER_NAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        repository: ferdaozdemir/oyente
+        dockerfile: ../../oyente/Dockerfile
+        tags: latest
